# me-system

./: .dockerignore  README.md  pyproject.toml  体验.bat  体验.command  体验.sh  停止体验.bat  停止体验.sh
.github/: me-core-rename-trigger
.github/workflows/: _me-core-rename-once.yml  apply-unify-refactor.yml  export-unify-workspace.yml  me-core.yml  me-graph-core.yml  me-system.yml  unify-package-runner.yml
deploy/experience/: Dockerfile  compose.yml
deploy/postgres/: .env.example  docker-compose.example.yml
docs/: 00-product-and-architecture-overview.md  architecture-status.md  experience.md  implementation.md
docs/acceptance/: ACCEPTANCE-STEP-01-ZOTERO-OBSIDIAN-LINK.md
migrations/: env.py
schemas/: candidate-graph-change.schema.json  graph-edge.schema.json
scripts/: unify_package.py
services/me-graph-core/: README.md  alembic.ini  pyproject.toml
services/me-graph-core/migrations/: env.py
services/me-graph-core/schemas/: evidence-ref.schema.json  graph-slice.schema.json
services/me-graph-core/src/me_graph_core/: __init__.py  cli.py  errors.py  fixtures.py
services/me-graph-core/src/me_graph_core/hermes/: __init__.py  access.py  tools.py
services/me-graph-core/src/me_graph_core/persistence/: __init__.py  database.py  models.py  store.py
services/me-graph-core/tests/: test_cli.py  test_cli_database.py  test_contracts.py  test_database_config.py  test_hermes_settings.py  test_hermes_tools.py  test_mcp_server.py  test_mcp_stdio.py  test_migrations.py  test_persistent_query_parity.py  test_postgres_integration.py  test_project_resolver.py  test_project_scope_guard.py  test_query.py  test_review.py  test_sqlalchemy_store.py  test_sqlalchemy_transactions.py  test_store.py
services/me-reader-core/: README.md  pyproject.toml
services/me-reader-core/src/me_reader_core/: __init__.py  cli.py  diagnostics.py  identity.py  models.py  obsidian.py  zotero_links.py  zotero_local.py
services/me-reader-core/tests/: test_cli.py  test_diagnostics.py  test_identity.py  test_models.py  test_obsidian.py  test_zotero_links.py  test_zotero_local.py
tests/: conftest.py  test_candidate_repository.py  test_cli.py  test_evidence_contracts.py  test_experience_contracts.py  test_experience_distribution.py  test_experience_entrypoint.py  test_experience_mcp.py  test_experience_postgres_e2e.py  test_experience_runner.py  test_experience_server.py  test_ingestion_cli.py  test_ingestion_contracts.py  test_ingestion_migration.py  test_ingestion_models.py  test_ingestion_postgres_e2e.py  test_ingestion_run_repository.py  test_mcp_stdio.py  test_package_identity.py  test_persistent_review.py  test_source_repository.py
(+132 files in other folders)
