[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "me-system"
version = "0.1.0"
description = "Persistent ME-Brain and ME-Who graph system for AI agents"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0,<2.1",
  "alembic>=1.18,<2",
  "psycopg[binary]>=3.2,<4",
  "mcp>=1.27,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "jsonschema>=4.20"]

[project.scripts]
me-system = "me_system.cli:main"
me-system-mcp = "me_system.hermes.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
