[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "me-graph-core"
version = "0.1.0"
description = "Canonical dual-graph contracts and query foundation for ME-System"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0,<2.1",
  "alembic>=1.18,<2",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "jsonschema>=4.20"]

[project.scripts]
me-graph = "me_graph_core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
